k8s/dev/service/2.deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api-instagram
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api-instagram
        service: api-instagram
    spec:
      containers:
      - name: api-instagram
        image: fernandoe/fe-instagram-api:0.0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
