k8s/dev/service/3.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-instagram
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: api-instagram
