k8s/dev/service/5.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api-instagram.dev.codigoaberto.io
      http:
        paths:
          - backend:
              serviceName: api-instagram
              servicePort: 80
  tls:
    - hosts:
        - api-instagram.dev.codigoaberto.io
      secretName: api-instagram-dev-codigoaberto-io-tls
